--- a/Destapa-Cañerias/Liquido-para-destapar-tuberias-de-agua-potable.html
+++ b/Destapa-Cañerias/Liquido-para-destapar-tuberias-de-agua-potable.html
@@ -138,27 +138,27 @@ Liquido para destapar tuberias de agua potable - Como destapar el inodoro con bi
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Como-destapar-el-baño-con-bicarbonato-y-vinagre.html">Como destapar el baño con bicarbonato y vinagre </a> 
+       <a href="../Servicios/Alguien-tiene-experiencia-con-Destapa-cantilde;erias-san-miguel.html">Alguien tiene experiencia con Destapa cañerias san miguel </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Hay-algun-consejo-para-Cantilde;erias-de-agua-tapadas.html">Hay algun consejo para Cañerias de agua tapadas </a> 
+       <a href="../Destapa-Cañerias/Cable-destapa-cañerias-precio.html">Cable destapa cañerias precio </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Me-gustaria-entender-mejor-Destapar-cantilde;eria-de-pvc.html">Me gustaria entender mejor Destapar cañeria de pvc </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-De-Cloacas-Precios.html">Destapaciones De Cloacas Precios </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Empresa-De-Destape-De-Cañerias-en-Palermo.html">Empresa De Destape De Cañerias en Palermo </a> 
+       <a href="../Servicios/Destapaciones-Cañerias-en-Palermo.html">Destapaciones Cañerias en Palermo </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Como-destapar-la-cantilde;eria-de-la-bacha-de-la-cocina.html">Como destapar la cañeria de la bacha de la cocina </a> 
+       <a href="../Destapa-Cañerias/Camara-De-Desague-Tapada.html">Camara De Desague Tapada </a> 
          </li>
 <!--EndPostsList-->
 
@@ -221,57 +221,57 @@ Liquido para destapar tuberias de agua potable - Como destapar el inodoro con bi
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapador-De-Baño.html">Destapador De Baño </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Servicios/Empresa-De-Destape-De-Cañerias-en-Palermo.html">Empresa De Destape De Cañerias en Palermo </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
        <a href="../Servicios/Bloque-de-plata-en-la-tabla-periodica.html">Bloque de plata en la tabla periodica </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapaciones-De-Inodoros.html">Destapaciones De Inodoros </a> 
+       <a href="../Servicios/Lo-Mejor-Para-Destapar-Bantilde;os.html">Lo Mejor Para Destapar Baños </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapador-de-cañerias-casero.html">Destapador de cañerias casero </a> 
+       <a href="../Servicios/Destapar-Cañerias-De-Pvc-en-Palermo.html">Destapar Cañerias De Pvc en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapador-De-Inodoros.html">Destapador De Inodoros </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-la-cantilde;eria-de-la-pileta-de-la-cocina.html">Como destapar la cañeria de la pileta de la cocina </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Productos-para-desatascar-tuberias.html">Productos para desatascar tuberias </a> 
+       <a href="../Servicios/Maquina-Para-Destapar-Cantilde;erias-Precios.html">Maquina Para Destapar Cañerias Precios </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapa-cañerias-zona-sur-berazategui.html">Destapa cañerias zona sur berazategui </a> 
+       <a href="../Servicios/Destapar-Cañeria-Con-Aire-en-Palermo.html">Destapar Cañeria Con Aire en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-de-cañerias-en-zona-norte.html">Destapaciones de cañerias en zona norte </a> 
+       <a href="../Servicios/No-Puedo-Destapar-La-Cañeria-en-Palermo.html">No Puedo Destapar La Cañeria en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Impacto-economico-de-la-plata.html">Impacto economico de la plata </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Emergencias.html">Destapaciones Emergencias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapacaños-manual-walmart.html">Destapacaños manual walmart </a> 
+       <a href="../Destapa-Cañerias/Remedios-caseros-para-destapar-cañerias-con-vinagre.html">Remedios caseros para destapar cañerias con vinagre </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Servicios/Productos-para-destapar-el-baño-walmart.html">Productos para destapar el baño walmart </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Limpiar-Desague-Bantilde;o.html">Limpiar Desague Baño </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
